--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,7 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+
+# ─────────── Git LFS 설정 ───────────
+# Firebase Native Libraries
+Assets/Firebase/Plugins/**/*.bundle filter=lfs diff=lfs merge=lfs -text
+Assets/Firebase/Plugins/**/*.so     filter=lfs diff=lfs merge=lfs -text
