--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,4 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 /.idea/.idea.trickytower/.idea
 .idea/.idea.trickytower/.idea/workspace.xml
+Assets/Firebase/Plugins/x86_64/FirebaseCppApp-12_9_0.dll
